add recommended merge schedule

--- a/packages/documentation/src/pages/getting-started/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/review.mdx
@@ -78,6 +78,7 @@ _A Jenkins job will run periodically and remove review instances for which the s
 ## Peer review and merge
 
 - Get at least one **pull request approval** from a peer
+- It is recommended not to merge at the end of the day or right before the weekend unless necessary.
 - [Squash your commits](https://github.blog/2016-04-01-squash-your-commits/) and **merge** into **master**
 - **Delete** pull request branch
 
