Remove old vets.gov text

--- a/packages/documentation/src/pages/forms/save-in-progress.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress.mdx
@@ -39,7 +39,7 @@ You will also need to make a couple changes in the user profile code, so that yo
 
 ## Static pages
 
-Your form will likely be linked somewhere in the static content for Vets.gov. In those places, we have the ability to replace something like an "Apply now" button with a widget to resume or start over an in progress form.
+Your form will likely be linked somewhere in the static content for VA.gov. In those places, we have the ability to replace something like an "Apply now" button with a widget to resume or start over an in progress form.
 
 In your content page, you can add front matter to set up a widget:
 
