--- a/packages/formation-react/src/components/AcceptTermsPrompt/AcceptTermsPrompt.mdx
+++ b/packages/formation-react/src/components/AcceptTermsPrompt/AcceptTermsPrompt.mdx
@@ -11,7 +11,7 @@ import AcceptTermsPrompt from './AcceptTermsPrompt'
 import AcceptTermsPrompt from '@department-of-veterans-affairs/formation-react/AcceptTermsPrompt'
 
 <AcceptTermsPrompt
-  terms={{termsContent: '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website Vets.gov. Vets.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on Vets.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on Vets.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website Vets.gov. Vets.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on Vets.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on Vets.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website Vets.gov. Vets.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on Vets.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on Vets.gov.</p></div>', headerContent: 'test header content', title: 'Terms and Conditions',footerContent:'test footer content', yesContent: 'accept terms and conditions'}}
+  terms={{termsContent: '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p></div>', headerContent: 'test header content', title: 'Terms and Conditions',footerContent:'test footer content', yesContent: 'accept terms and conditions'}}
   onAccept={()=>{}}
   onCancel={()=>{}}
 />
@@ -21,7 +21,7 @@ import AcceptTermsPrompt from '@department-of-veterans-affairs/formation-react/A
 <div className="site-c-reactcomp__rendered">
   <AcceptTermsPrompt
     terms={{
-      termsContent: '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website Vets.gov. Vets.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on Vets.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on Vets.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website Vets.gov. Vets.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on Vets.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on Vets.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website Vets.gov. Vets.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on Vets.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on Vets.gov.</p></div>', headerContent: 'test header content', title: 'Terms and Conditions',footerContent:'test footer content', yesContent: 'accept terms and conditions'
+      termsContent: '<div><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p><p><strong>Terms and Conditions for Medical Information</strong></p><p>The Department of Veterans Affairs (VA) owns and manages the website VA.gov. VA.gov allows you to use online tools that display parts of your personal health information. This health information is only displayed on VA.gov—the information is stored on VA protected federal computer systems and networks. VA supports the secure storage and transmission of all information on VA.gov.</p></div>', headerContent: 'test header content', title: 'Terms and Conditions',footerContent:'test footer content', yesContent: 'accept terms and conditions'
     }}
     onAccept={()=>{}}
     onCancel={()=>{}}
