--- a/packages/documentation/src/pages/getting-started/workflow/overview.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/overview.mdx
@@ -8,23 +8,22 @@ VA.gov uses a [Continuous Integration](https://www.thoughtworks.com/continuous-i
 
 1. [Write](/getting-started/workflow/write)
     - Determine which issue to work on
-    - Create feature branch (naming convention {issue-id}-{subject you are working on})
+    - Create feature branch
+      - branch naming convention {issue-id}-{subject you are working on}
     - Code new functionality
     - Write tests for new functionality
-    - Cross browser testing (Chrome, IE, Safari, Edge)
+    - Test new functionality on supported [browsers](/platform/front-end-standards/documented-decisions/browser-support/) (Chrome, IE, Safari, Edge)
 2. [Review](/getting-started/workflow/review)
     - Submit pull request
     - Run unit tests and compliance scans (kicked off when a pull request is created)
-    - Pull request instance will be available for testing (page link should be in the PR)
+    - Test feature on review instance (page link is available on the PR page)
     - Test and peer review code (read: code review)
-    - Revision request fixes if needed
 3. [Deploy](/getting-started/workflow/deploy)
-    - It is recommended not to merge at the end of the day or right before the weekend unless necessary. 
     - Merge code to stable code base
-    - Code will deploy to staging for final testing
-    - Production will get deployed at the scheduled daily time.
+    - Jenkins automatically deploys changes merged into `master` to staging and dev
+    - Jenkins automatically deploys master to production every day
 
-_Each project's code base has a branch called `master` by default. Anything in `master` is deemed to be stable and deployable. This means that **anything you merge will need to be ready to immediately be live or hidden in some way behind a feature flag**._
+_Each project's code base has a branch called `master` by default. Anything in `master` is deemed to be stable and deployable. This means that **anything you merge will need to be ready to immediately be live or hidden in some way behind a feature flag**._ Merge changes when support can be provided; Avoid merging significant changes at the end of the day or before the weekend.
 
 ## References
 [GitHub Flow](https://guides.github.com/introduction/flow/)
