--- a/packages/documentation/src/pages/getting-started/workflow/write.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/write.mdx
@@ -42,3 +42,7 @@ As you code your changes, commit changes to your feature branch. **Commit early.
 These tests are automatically executed during [review](/getting-started/common-tasks/workflow/review), but you should [run them locally](/getting-started/common-tasks/test) before moving on.
 
 _The only way to quickly know if your new change breaks the existing functionality of the application is to have a suite of automated tests that execute whenever new stuff is added. When you add new functionality, new tests are required so that future developers know if they have broken your contributions._
+
+## Manual Testing
+
+- Test new functionality on supported [browsers](/platform/front-end-standards/documented-decisions/browser-support/)
