--- a/packages/documentation/src/pages/getting-started/workflow/overview.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/overview.mdx
@@ -23,7 +23,9 @@ VA.gov uses a [Continuous Integration](https://www.thoughtworks.com/continuous-i
     - Jenkins automatically deploys changes merged into `master` to staging and dev
     - Jenkins automatically deploys master to production every day
 
-_Each project's code base has a branch called `master` by default. Anything in `master` is deemed to be stable and deployable. This means that **anything you merge will need to be ready to immediately be live or hidden in some way behind a feature flag**._ Merge changes when support can be provided; Avoid merging significant changes at the end of the day or before the weekend.
+_Each project's code base has a branch called `master` by default. Anything in `master` is deemed to be stable and deployable. This means that **anything you merge will need to be ready to immediately be live or hidden in some way behind a feature flag**._
+
+Merge changes when support can be provided; Avoid merging significant changes at the end of the day or before the weekend.
 
 ## References
 [GitHub Flow](https://guides.github.com/introduction/flow/)
