--- a/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
@@ -1,13 +1,17 @@
 ---
-title: Making formation changes
+title: Making Updating Formation and Formataion React 
+tags: formation, formation-react, update, release, publish, npm
 ---
 
-# Making formation and formation-react changes
-This document will guide you through the process of making changes to formation and formation-react.
+## Making updates to formation
+You can find a detailed guide on contributing to formation at [https://dev-design.va.gov/documentation/contributing-to-formation](https://dev-design.va.gov/documentation/contributing-to-formation)
 
-## Previewing Changes
-
-As you make changes to these modules, you'll likely want to see how your changes look in a consuming app, such as the `vets-website` app. [Check out these instructions on how to do so](./previewing-changes.md).
+## Making updates to formation-react
+1. Components should be created and tested in vets-website first before being moved over to formation-react
+2. Transfer component to formation-react
+3. Test new node_module component locally. [Check out these instructions on how to do so](/previewing-changes)
+4. Write component tests
+5. [Create MDX documentation file](/documentation-guide/doc-page)
 
 ## Publishing Module to NPM
 
@@ -27,15 +31,22 @@ You'll need to choose what type of version update to make:
 
 > If you are unsure of what to pick, do a major version update on modules that are changing.
 
-### 2. Merge your PR to master
+### 2. Create and release adding details
+- Navigate to the package folder
+- Run the release script
+    $ yarn release
+- Once the script has succeeded, go to the link provided in the console
+- Edit the release and add any relevant information.
+
+### 3. Merge your PR to master
 
 Once your changes are approved, squash merge them to master. Also, if your change is a breaking change, please prefix your commit message with `BREAKING CHANGE: `. Also keep in mind that your commit messages will be in a changelog that people use to figure out what has changed between releases, so make sure it accurately describes your changes.
 
-### 3. Build and publish
+### 4. Build and publish
 
 * Run `yarn build`
 * For each module you need to publish, switch to its folder in `packages/` and run `npm publish`.
 
-### 4. Update consuming apps
+### 5. Update consuming apps
 
 The last step is to update the `package.json` files of consuming apps to use the latest version of `@department-of-veterans-affairs/formation` (or `formation-react`). For example, if you are working with the `vets-website` project, open the `vets-website`'s `package.json` to update the version number of the `@department-of-veterans-affairs/formation` entry listed in the `dependencies` section. The version number should match what you just published to NPM.
