edit updating formation doc

--- a/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
@@ -11,7 +11,7 @@ You can find a detailed guide on contributing to formation at [https://dev-desig
 2. Transfer component to formation-react
 3. Test new node_module component locally. [Check out these instructions on how to do so](/previewing-changes)
 4. Write component tests
-5. [Create MDX documentation file](/documentation-guide/doc-page)
+5. [Create your react component documentation](/documentation-guide/doc-page)
 
 ## Publishing Module to NPM
 
@@ -31,10 +31,12 @@ You'll need to choose what type of version update to make:
 
 > If you are unsure of what to pick, do a major version update on modules that are changing.
 
-### 2. Create and release adding details
+### 2. Create a release 
 - Navigate to the package folder
 - Run the release script
+    ```
     $ yarn release
+    ```
 - Once the script has succeeded, go to the link provided in the console
 - Edit the release and add any relevant information.
 
