--- a/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
@@ -32,6 +32,7 @@ You'll need to choose what type of version update to make:
 > If you are unsure of what to pick, do a major version update on modules that are changing.
 
 ### 2. Create a release 
+You will need a github [personal access token](https://help.github.com/en/articles/creating-a-personal-access-token-for-the-command-line). This should be set aS **GITHUB_API_KEY** in your environment variable. 
 - Navigate to the package folder
 - Run the release script
     ```
