--- a/packages/documentation/src/pages/platform/architecture/cms.mdx
+++ b/packages/documentation/src/pages/platform/architecture/cms.mdx
@@ -11,9 +11,10 @@ In addition, there is a system that can be used to view content changes on deman
 
 ## Existing content sources
 
-Content displayed on VA.gov exists in three primary locations:
+Content displayed on VA.gov exists in four primary locations:
 
 - The [vagov-content repo](https://github.com/department-of-veterans-affairs/vagov-content), in Markdown and YAML
+- The [vets-website repo](https://github.com/department-of-veterans-affairs/vets-website) (footer link data in JSON, plus templating)
 - Teamsite, the VA's legacy content management system
 - Drupal, the VA's current content management system
 
@@ -27,7 +28,7 @@ All Drupal environments require you to either be on the VA network or the SOCKS 
 | ----------- | -------- | ------------ |
 | development | http://dev.cms.va.gov | https://dev.va.gov |
 | staging | http://staging.cms.va.gov | https://staging.va.gov |
-| production | http://prod.cms.va.gov | https://va.gov |
+| production | http://prod.cms.va.gov | https://www.va.gov |
 
 ## How content is transformed into pages
 
