--- a/packages/formation-react/src/components/PromoBanner/PromoBanner.mdx
+++ b/packages/formation-react/src/components/PromoBanner/PromoBanner.mdx
@@ -1,7 +1,7 @@
 ---
 title: PromoBanner
 name: PromoBanner
-tags: promo banner, promobanner, announcement
+tags: promo banner, promo-banner, promobanner, announcement
 ---
 
 import PromoBanner from './PromoBanner'
