--- a/packages/formation-react/src/components/PromoBanner/PromoBanner.mdx
+++ b/packages/formation-react/src/components/PromoBanner/PromoBanner.mdx
@@ -42,7 +42,7 @@ export class RenderedComponent extends React.Component {
         {!this.state.dismissed ? (
           <PromoBanner
             type={PROMO_BANNER_TYPES.announcement}
-            onClose={() => this.setState({ dismissed: true }}
+            onClose={() => this.setState({ dismissed: true })}
             href="https://missionact.va.gov/"
             text="Learn how you can get easier access to health care with the MISSION Act"
           />
