--- a/packages/formation-react/src/components/PromoBanner/PromoBanner.mdx
+++ b/packages/formation-react/src/components/PromoBanner/PromoBanner.mdx
@@ -41,7 +41,7 @@ export class RenderedComponent extends React.Component {
       <div className="site-c-reactcomp__rendered">
         {!this.state.dismissed ? (
           <PromoBanner
-            type={PROMO_BANNER_TYPES.announcement}
+            type="announcement"
             onClose={() => this.setState({ dismissed: true })}
             href="https://missionact.va.gov/"
             text="Learn how you can get easier access to health care with the MISSION Act"
