--- a/packages/documentation/src/pages/platform/architecture/cms.mdx
+++ b/packages/documentation/src/pages/platform/architecture/cms.mdx
@@ -63,7 +63,7 @@ A typical cms also provides an easy way to preview changes before making them li
 | Environment | Site url | VA.gov environment |
 | ----------- | -------- | ------------ |
 | development | http://preview-dev.vfs.va.gov | https://dev.va.gov |
-| staging | http://preview-staging-vfs.va.gov | https://staging.va.gov |
+| staging | http://preview-staging.vfs.va.gov | https://staging.va.gov |
 | production | http://preview-prod.vfs.va.gov | https://va.gov |
 
 The preview server is written in Node and Express, [located in vets-website](https://github.com/department-of-veterans-affairs/vets-website/blob/master/script/preview.js).
