--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -17,8 +17,14 @@ These instructions cover the installation of dependencies needed for running VA.
 
 1. Install `nvm`:
 
+Mac:
 ```bash
 brew update && brew install nvm
+```
+
+Linux:
+```bash
+curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
 ```
 
 _Follow the post install instructions in the success message._
