--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -18,11 +18,15 @@ These instructions cover the installation of dependencies needed for running VA.
 1. Install `nvm`:
 
 Mac:
+
 ```bash
 brew update && brew install nvm
 ```
 
 Linux:
+
+To get the latest version of NVM visit the official page. [NVM](https://github.com/nvm-sh/nvm)
+
 ```bash
 curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
 ```
