--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -155,7 +155,7 @@ There are a couple ways to do release toggles that each have UX trade offs.
 - **Ignore the bootstrapped values and show a loading state for the feature**
 
   - The app will show a loading state for the new feature while the toggle values are retrieved from the service 
-  - This works well for content that is visible on the initial render of the page. There's no standardized approach- the way this is updated is depdendent on the UX goals. 
+  - This works well for content that is visible on the initial render of the page. There's no standardized approach; the way this is updated is depdendent on the UX goals. 
 
 ### Flipper UI
 
