--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -125,3 +125,38 @@ All liquid templates have access to the current feature flag state:
   <div>Fancy new feature</div>
 {% endif %}
 ```
+
+## Release Toggles 
+
+_This feature is in active development and will replace the current approaches to managing release toggles._ 
+
+### Overview 
+
+- Allows for production toggle switching without redeploying `vets-website`
+- Provides a UI for managing feature toggle behavior 
+- Provides code helpers for handling common UX scenarios 
+
+### Client behavior 
+
+1. During the build process, feature toggle values are retrieved and included in each of the static html pages. 
+2. When the page loads, the feature toggle client retrieves the bootstrapped values from the static html and renders the page using those values.
+3. After the page is rendered, the feature toggle client retrieves the latest toggle values from the feature toggle service. 
+4. The page is updated using the latest feature toggle values. 
+
+### User experience considerations 
+
+There are a couple ways to do release toggles that each have UX trade offs.
+
+- **Use the bootstrapped values on the initial render**
+
+  - The app will use the values from the static page first and _update_ the markup if the values retrieved from the service are different
+  - This works well for content that is not visible on the initial render of the page. Ideally, the update is either not be visible to the user or animates into the view using a simple CSS transition
+
+- **Ignore the bootstrapped values and show a loading state for the feature**
+
+  - The app will show a loading state for the new feature while the toggle values are retrieved from the service 
+  - This works well for content that is visible on the initial render of the page. There's no standardized approach; the way this is updated is depdendent on the UX goals. 
+
+### Flipper UI
+
+- Overview of toggle management UI can be found [here](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/Practice%20Areas/Engineering/feature_toggle.md)
