--- a/packages/documentation/src/pages/getting-started/internal-tools.mdx
+++ b/packages/documentation/src/pages/getting-started/internal-tools.mdx
@@ -1,3 +1,8 @@
+**This content/page is no longer maintained and likely outdated.** 
+ 
+*[Please see the most current documentation in the va.gov-team repo >](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/working-with-vsp/onboarding/request-access-to-tools.md)*
+
+
 ---
 title: Access internal tools
 tags: SOCKS proxy, Jenkins, Sentry, Grafana, SwitchyOmega
