copy edit on step 2

--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -170,7 +170,7 @@ Follow these steps to add and use a new feature toggle to use in `vets-website`
 _There are no naming conventions yet. Current examples namespace with the app name first e.g. facilityLocatorShowCommunityCares, profileShowDirectDeposit_
 
 2. Add the feature toggle name to 
- - using camel case in `vets-website`: [/src/platform/utilities/feature-toggles/feature-toggle-query-list.json](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/utilities/feature-toggles/feature-toggle-query-list.json) 
+ - `vets-website` using camel case: [/src/platform/utilities/feature-toggles/feature-toggle-query-list.json](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/utilities/feature-toggles/feature-toggle-query-list.json) 
 
  ```json
 {
@@ -178,7 +178,7 @@ _There are no naming conventions yet. Current examples namespace with the app na
 }
  ```
 
- - using snake case in `vets-api': [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml)
+ - `vets-api' using snake case: [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml)
 
   ```yml
  features:
