correction on step 4

--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -192,7 +192,7 @@ _There are no naming conventions yet. Current examples namespace with the app na
 
 _Crosslinking the PRs in a comment will make it easier for the reviewers to check_ 
 
-4. Run `vet-api` locally 
+4. Run `vet-apis` locally 
 
 _This can be done on master after your PR is merged or off of your feature branch_
 
