fix step 2 instructions

--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -178,7 +178,7 @@ _There are no naming conventions yet. Current examples namespace with the app na
 }
  ```
 
- - `vets-api' using snake case: [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml)
+ - `vets-api` using snake case: [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml)
 
   ```yml
  features:
