Fixed typo in frontmatter.

--- a/packages/documentation/src/pages/platform/architecture/build-deploy-flows.mdx
+++ b/packages/documentation/src/pages/platform/architecture/build-deploy-flows.mdx
@@ -1,5 +1,5 @@
 ---
-Title: Build and deploy Jenkins flows
+title: Build and deploy Jenkins flows
 tags: Jenkins, drupal, metalsmith, cache, master
 ---
 
